--- a/RouteC41.G02.PL/Views/_ViewImports.cshtml
+++ b/RouteC41.G02.PL/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
 ﻿@using RouteC41.G02.PL
-@using RouteC41.G02.PL.Models
+@using RouteC41.G02.PL.ViewModels;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
