--- a/RouteC41.G02.PL/Views/Department/Index.cshtml
+++ b/RouteC41.G02.PL/Views/Department/Index.cshtml
@@ -9,7 +9,7 @@
 <br />
 <br />
 
-<a asp-controller="Departments" asp-action="Create" class="btn btn-primary">Create New Department</a>
+<a asp-controller="Department" asp-action="Create" class="btn btn-primary">Create New Department</a>
 
 <br />
 
