Employee Repository-BLL

--- a/RouteC41.G02.PL/Views/Department/Delete.cshtml
+++ b/RouteC41.G02.PL/Views/Department/Delete.cshtml
@@ -29,7 +29,7 @@
     </div>
 
     <input  type="submit" value="Delete" class="btn btn-danger"/>
-    <a asp-action="Index" class="btn btn-secondary">Cancle</a>
+    <a asp-action="Index" class="btn btn-secondary">Cancel</a>
 
 
 
