--- a/RouteC41.G02.PL/Views/Employee/Delete.cshtml
+++ b/RouteC41.G02.PL/Views/Employee/Delete.cshtml
@@ -10,53 +10,7 @@
 <br />
 
 <form asp-action="Delete">
-    <div class="form-group">
-        <label class="col-form-label" asp-for="Name"></label>
-        <input asp-for="Name" class="form-control" readonly />
-
-    </div>
-    <div class="form-group">
-        <label class="col-form-label" asp-for="EmailAddress"></label>
-        <input asp-for="EmailAddress" class="form-control" readonly />
-
-    </div>
-
-    <div class="form-group">
-        <label class="col-form-label" asp-for="Address"></label>
-        <input asp-for="Address" class="form-control" readonly />
-
-    </div>
-
-    <div class="form-group">
-        <label class="col-form-label" asp-for="Age"></label>
-        <input asp-for="Age" class="form-control" readonly />
-
-    </div>
-
-    <div class="form-group">
-        <label class="col-form-label" asp-for="Salary"></label>
-        <input asp-for="Salary" class="form-control" readonly />
-
-    </div>
-
-    <div class="form-group">
-        <label class="col-form-label" asp-for="Gneder"></label>
-        <input asp-for="Gneder" class="form-control" readonly />
-
-    </div>
-
-    <div class="form-group">
-        <input asp-for="IsActive" class="form-check-input" readonly />
-        <label class="col-form-label" asp-for="IsActive"></label>
-
-    </div>
-
-    <div class="form-group">
-        <label class="col-form-label" asp-for="CreationDate"></label>
-        <input asp-for="CreationDate" class="form-control" readonly />
-
-
-    </div>
+    <partial name="PartialViews/DetailsDeleteEmployeePartial" />
 
     <input type="submit" value="Delete" class="btn btn-danger" />
     <a asp-action="Index" class="btn btn-secondary">Cancel</a>
