--- a/RouteC41.G02.PL/Views/Employee/Details.cshtml
+++ b/RouteC41.G02.PL/Views/Employee/Details.cshtml
@@ -8,53 +8,8 @@
 <br />
 <br />
 <div>
-<div class="form-group">
-    <label class="col-form-label" asp-for="Name"></label>
-    <input asp-for="Name" class="form-control" readonly />
+    <partial name="PartialViews/DetailsDeleteEmployeePartial" />
 
-</div>
-<div class="form-group">
-    <label class="col-form-label" asp-for="EmailAddress"></label>
-    <input asp-for="EmailAddress" class="form-control" readonly />
-
-</div>
-
-<div class="form-group">
-    <label class="col-form-label" asp-for="Address"></label>
-    <input asp-for="Address" class="form-control" readonly />
-   
-</div>
-
-<div class="form-group">
-    <label class="col-form-label" asp-for="Age"></label>
-    <input asp-for="Age" class="form-control" readonly />
-
-</div>
-
-<div class="form-group">
-    <label class="col-form-label" asp-for="Salary"></label>
-    <input asp-for="Salary" class="form-control" readonly />
-   
-</div>
-
-<div class="form-group">
-    <label class="col-form-label" asp-for="Gneder"></label>
-    <input asp-for="Gneder" class="form-control" readonly />
-
-</div>
-
-<div class="form-group">
-    <input asp-for="IsActive" class="form-check-input" readonly />
-    <label class="col-form-label" asp-for="IsActive" ></label>
-
-</div>
-
-<div class="form-group">
-    <label class="col-form-label" asp-for="CreationDate"></label>
-    <input asp-for="CreationDate" class="form-control" readonly />
-
-
-</div>
 
     <a asp-controller="Employee" asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-primary">Edit</a>
     <a asp-controller="Employee" asp-action="Index" class="btn btn-light">Back to List</a>
