--- a/RouteC41.G02.PL/Views/Employee/Create.cshtml
+++ b/RouteC41.G02.PL/Views/Employee/Create.cshtml
@@ -1,6 +1,9 @@
-﻿@model Employee
+﻿
+@model Employee
+@inject IDepartmentReposotry _departmentRepo
 @{
     ViewData["Title"] = "Create";
+
 }
 
 <h1>Create</h1>
