--- a/RouteC41.G02.PL/Views/Employee/Index.cshtml
+++ b/RouteC41.G02.PL/Views/Employee/Index.cshtml
@@ -39,6 +39,8 @@
                 
                 <th>@Html.DisplayNameFor(D => D.Name)</th>
                 <th>@Html.DisplayNameFor(D => D.Age)</th>
+                <th>@Html.DisplayNameFor(D=>D.Address)</th>
+                <th>@Html.DisplayNameFor(D=>D.Department)</th>
                 <th>@Html.DisplayNameFor(D => D.Salary)</th>
                 <th>@Html.DisplayNameFor(D => D.IsActive)</th>
                 @* <th>@Html.DisplayNameFor(D => D.Phone)</th> *@
@@ -64,6 +66,8 @@
             <tr>
                     <td>@employee.Name</td>
                     <td>@employee.Age</td>
+                    <td>@employee.Address</td>
+                    <td>@employee.Department?.Name</td>
                     <td>@Html.DisplayFor(M=>employee.Salary)</td>
                     <td>@Html.DisplayFor(M => employee.IsActive)</td>
                     <td>@employee.Gneder</td>
