--- a/RouteC41.G02.PL/Views/Employee/PartialViews/CreateEditEmployeePartial.cshtml
+++ b/RouteC41.G02.PL/Views/Employee/PartialViews/CreateEditEmployeePartial.cshtml
@@ -1,4 +1,9 @@
 ﻿@model Employee
+@inject IDepartmentReposotry _departmentRepo
+
+@{
+    var departments = new SelectList(_departmentRepo.GetAll(),nameof(Department.Id),nameof(Department.Name));
+}
 
 <div class="form-group">
     <label class="col-form-label" asp-for="Name"></label>
@@ -52,3 +57,12 @@
 
 
 </div>
+
+    <div class="form-group">
+        <label class="col-form-label" asp-for="Department"></label>
+        <select class="form-control" asp-for="DepartmentId" asp-items="@departments">
+            <option value="@null" >--Select Department</option>
+
+        </select>
+
+    </div>
