--- a/RouteC41.G02.PL/Views/_ViewImports.cshtml
+++ b/RouteC41.G02.PL/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using RouteC41.G02.PL
 @using RouteC41.G02.PL.ViewModels
 @using RouteC41.G02.DAL.Models;
+@using RouteC41.G02.BLL.Interfaces
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
