--- a/RouteC41.G02.PL/Views/Employee/Index.cshtml
+++ b/RouteC41.G02.PL/Views/Employee/Index.cshtml
@@ -3,33 +3,35 @@
 @{
     ViewData["Title"] = "Index";
 
-     string viewDataMessage = ViewData["Message"] as string;//Enforce Type Safety
-     string viewBagMessgage = ViewBag.Message; //Can't Enforce Type SAafety
 
 }
 
-@if (!string.IsNullOrEmpty(TempData["Message"] as string))
-{
-    <div class="alert alert-primary">
-        @TempData["message"]
-    </div>
-}
 
-@*<div class="alert alert-warning">
-    @ViewData["Message"]
-</div> *@
-
-@* <div class="alert alert-success">
-    @ViewBag.Message
-</div> *@
 
 <h1>All Employees</h1>
 <br />
 <br />
 
+
+
 <a asp-controller="Employee" asp-action="Create" class="btn btn-primary">Create New Employee</a>
 
 <br />
+
+<div class="row justify-content-center align-items-center mt-5">
+    <form asp-action="Index" class="row col-8 offset-1">
+        <div class="col-8">
+            <input type="text" class="form-control" name="searchInp" id="searchInp" placeholder="Search By Name" />
+            </div>
+            <div class="col-4">
+                <input type="submit" value="Search" class="btn btn-success" />
+            </div>
+
+        
+
+    </form>
+
+</div>
 
 @if(Model.Count()>0)
 {
