--- a/RouteC41.G02.PL/Views/Employee/Index.cshtml
+++ b/RouteC41.G02.PL/Views/Employee/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿
-@model IEnumerable<Employee>
+@model IEnumerable<EmployeeViewModel>
 @{
     ViewData["Title"] = "Index";
 
@@ -44,13 +44,13 @@
                 <th>@Html.DisplayNameFor(D=>D.Address)</th>
                 <th>@Html.DisplayNameFor(D=>D.Department)</th>
                 <th>@Html.DisplayNameFor(D => D.Salary)</th>
-                <th>@Html.DisplayNameFor(D => D.IsActive)</th>
+                <th>@Html.DisplayNameFor(D => D.isActive)</th>
                 @* <th>@Html.DisplayNameFor(D => D.Phone)</th> *@
                 <th>@Html.DisplayNameFor(D => D.Gneder)</th>
                 <th>@Html.DisplayNameFor(D => D.EmailAddress)</th>
                 @* <th>@Html.DisplayNameFor(D => D.EmpType)</th> *@
                 @* <th>@Html.DisplayNameFor(D => D.CreationDate)</th> *@
-                <th>@Html.DisplayNameFor(D=>D.Phone)</th>
+                <th>@Html.DisplayNameFor(D=>D.PhoneNumber)</th>
                 <th>@Html.DisplayNameFor(D => D.CreationDate)</th>
 
                 <th>Details</th>
@@ -71,10 +71,10 @@
                     <td>@employee.Address</td>
                     <td>@employee.Department?.Name</td>
                     <td>@Html.DisplayFor(M=>employee.Salary)</td>
-                    <td>@Html.DisplayFor(M => employee.IsActive)</td>
+                    <td>@Html.DisplayFor(M => employee.isActive)</td>
                     <td>@employee.Gneder</td>
                     <td>@Html.DisplayFor(M => employee.EmailAddress)</td>
-                    <td>@employee.Phone</td>
+                    <td>@employee.PhoneNumber</td>
                     <td>@employee.CreationDate</td>
 
                     <partial name="_ButtonsPartial" model="@employee.Id"/>
