--- a/RouteC41.G02.PL/Views/Employee/PartialViews/CreateEditEmployeePartial.cshtml
+++ b/RouteC41.G02.PL/Views/Employee/PartialViews/CreateEditEmployeePartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model Employee
+﻿@model EmployeeViewModel
 @inject IDepartmentReposotry _departmentRepo
 
 @{
@@ -40,14 +40,14 @@
     <span asp-validation-for="Gneder" class="text-danger"></span>
 </div>
 <div class="form-group">
-    <label class="col-form-label" asp-for="Phone"></label>
-    <input asp-for="Phone" class="form-control" />
-    <span asp-validation-for="Phone" class="text-danger"></span>
+    <label class="col-form-label" asp-for="PhoneNumber"></label>
+    <input asp-for="PhoneNumber" class="form-control" />
+    <span asp-validation-for="PhoneNumber" class="text-danger"></span>
 </div>
 
 <div class="form-group">
-    <input asp-for="IsActive" class="form-check-input" />
-    <label class="col-form-label" asp-for="IsActive"></label>
+    <input asp-for="isActive" class="form-check-input" />
+    <label class="col-form-label" asp-for="isActive"></label>
 
 </div>
 
