--- a/RouteC41.G02.PL/Views/Employee/PartialViews/DetailsDeleteEmployeePartial.cshtml
+++ b/RouteC41.G02.PL/Views/Employee/PartialViews/DetailsDeleteEmployeePartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model Employee
+﻿@model EmployeeViewModel
 
 <div class="form-group">
     <label class="col-form-label" asp-for="Name"></label>
@@ -36,8 +36,8 @@
 </div>
 
 <div class="form-group">
-    <input asp-for="IsActive" class="form-check-input" readonly />
-    <label class="col-form-label" asp-for="IsActive"></label>
+    <input asp-for="isActive" class="form-check-input" readonly />
+    <label class="col-form-label" asp-for="isActive"></label>
 
 </div>
 
