Unit Of Work -1

--- a/RouteC41.G02.PL/Views/Employee/Create.cshtml
+++ b/RouteC41.G02.PL/Views/Employee/Create.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @model EmployeeViewModel
-@inject IDepartmentReposotry _departmentRepo
+@* @inject IDepartmentReposotry _departmentRep *@o
 @{
     ViewData["Title"] = "Create";
 
