--- a/RouteC41.G02.PL/Views/Employee/PartialViews/CreateEditEmployeePartial.cshtml
+++ b/RouteC41.G02.PL/Views/Employee/PartialViews/CreateEditEmployeePartial.cshtml
@@ -66,3 +66,9 @@
         </select>
 
     </div>
+
+    <div class="form-group">
+        <label class="col-form-label">Image</label>
+        <input  asp-for="Image" class="form-control-file" />
+
+    </div>
