--- a/RouteC41.G02.PL/Views/Employee/Index.cshtml
+++ b/RouteC41.G02.PL/Views/Employee/Index.cshtml
@@ -38,7 +38,7 @@
     <table class="table table-striped table-hover">
         <thead>
             <tr>
-                
+                <th>Image</th>
                 <th>@Html.DisplayNameFor(D => D.Name)</th>
                 <th>@Html.DisplayNameFor(D => D.Age)</th>
                 <th>@Html.DisplayNameFor(D=>D.Address)</th>
@@ -66,6 +66,10 @@
             @foreach (var employee in Model)
             {
             <tr>
+                    <td>
+                        <img src="~/Files/Images/@employee.ImageName" class="img-fluid rounded-circle" alt="Employee Image" />
+
+                    </td>
                     <td>@employee.Name</td>
                     <td>@employee.Age</td>
                     <td>@employee.Address</td>
