--- a/RouteC41.G02.PL/Views/Employee/PartialViews/DetailsDeleteEmployeePartial.cshtml
+++ b/RouteC41.G02.PL/Views/Employee/PartialViews/DetailsDeleteEmployeePartial.cshtml
@@ -1,5 +1,10 @@
 ﻿@model EmployeeViewModel
 
+<div>
+    <img src="~/Files/Images/@Model.ImageName" class="img-fluid rounded-circle"   alt="Employee Image"/>
+
+</div>
+
 <div class="form-group">
     <label class="col-form-label" asp-for="Name"></label>
     <input asp-for="Name" class="form-control" readonly />
