--- a/RouteC41.G02.PL/Views/_ViewImports.cshtml
+++ b/RouteC41.G02.PL/Views/_ViewImports.cshtml
@@ -2,4 +2,5 @@
 @using RouteC41.G02.PL.ViewModels
 @using RouteC41.G02.DAL.Models;
 @using RouteC41.G02.BLL.Interfaces
+@using RouteC41.G02.PL.ViewModels.User
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
